--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
     <header>
         <div id = "control" class="control box-5"><span> 📌</span></div>
+        <input type="color" id="colorPicker" />
+         <input type="range" name="brushWidth" id="brushWidth">
+         <input type="button" id="fill" value="Fill">
 
     </header>
     <main>
